--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <!-- Global site tag (gtag.js)-->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=Google_Analytics_Tracking_Id"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172453420-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'Google_Analytics_Tracking_Id');
+    gtag('config', 'UA-172453420-1');
   </script>
   <!--End of global site tag-->
   <meta charset="utf-8">
